--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,7 +14,7 @@
         "type": "image/png"
       }
     ],
-    "theme_color": "green",
+    "theme_color": "#4DB685",
     "background_color": "#FFFFFF",
     "display": "fullscreen",
     "orientation": "portrait"
