--- a/public/manifest.json
+++ b/public/manifest.json
@@ -54,6 +54,6 @@
     ],
     "theme_color": "#4DB685",
     "background_color": "#FFFFFF",
-    "display": "fullscreen",
+    "display": "standalone",
     "orientation": "portrait"
   }
