--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "leaflet": "^1.9.4",
+    "leaflet-doubletapdrag": "^0.1.1",
+    "leaflet-doubletapdragzoom": "^0.3.0",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
