--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "leaflet": "^1.9.4",
     "leaflet-doubletapdrag": "^0.1.1",
     "leaflet-doubletapdragzoom": "^0.3.0",
-    "next": "13.3.1",
+    "next": "^15.4.6",
     "next-pwa": "^5.6.0",
-    "postcss": "8.4.23",
+    "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.1",
