--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/postcss": "^4.1.11",
     "@vercel/analytics": "^1.5.0",
     "autoprefixer": "10.4.21",
     "eslint": "9.32.0",
@@ -25,6 +26,6 @@
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-use": "^17.6.0",
-    "tailwindcss": "4.1.11"
+    "tailwindcss": "^4.1.11"
   }
 }
